--- a/client/src/signup/Signup.scss
+++ b/client/src/signup/Signup.scss
@@ -5,14 +5,18 @@
   height: 100vh;
   flex-direction: column;
 
-  .logo {
-    img {
-      height: 140px;
-    }
+  .title {
+    padding-left: 10px;
+    font-size: 26px;
+    letter-spacing: 10px;
+    font-weight: bold;
+
   }
 }
 
-.loginInput {
+.signupInput {
+  margin-top: 30px;
+
   input {
     margin-top: 5px;
     height: 28px;
@@ -20,19 +24,19 @@
     font-size: 14px;
   }
 
-  .loginText {
+  .signupText {
     margin-top: 20px;
     font-size: 12px;
     font-weight: 600;
   }
 }
 
-.loginBtn {
+.signupBtn {
   text-align: right;
 
   button {
-    margin-top: 20px;
-    height: 32px;
+    margin-top: 60px;
+    height: 40px;
     width: 308px;
     border: 1px solid #111;
     background: rgb(255, 255, 255);
@@ -49,25 +53,6 @@
       outline: none;
       color: rgb(255, 255, 255);
       background: #111;
-    }
-  }
-
-  .signupBtn {
-    letter-spacing: 3px;
-    margin-top: 5px;
-    font-size: 17px;
-
-    a {
-      text-decoration: none;
-      color: inherit;
-      border-radius: 5px;
-      transition: background-color 0.2s ease, color 0.2s ease, border 0.2s ease;
-      padding: 2px 10px;
-
-      &:hover {
-        background-color: #111;
-        color: white;
-      }
     }
   }
 }
